src/Components/History.css
.history-holder {
	background-color: rgb(253, 253, 253);
	display: grid;
	grid-template-areas:
		"back heading"
		"scores scores";
	justify-items: center;
	/* align-items: center; */
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	border-radius: 50px;
	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
	height: 35rem;
	width: 60rem;
}

.hist-back-button {
	grid-area: back;
	background: white;
	border: none;
	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
	border-radius: 50%;
	font-size: 2rem;
	height: 3rem;
	width: 3rem;
	outline: none;
	cursor: pointer;
	justify-self: start;
	margin-left: 1.5rem;
	display: flex;
	align-items: center;
	margin-top: 3.5rem;
}

.button-link {
	color: black;
}

.button-link:hover {
	transition: 0.00001s ease;
	color: gray;
}

.title {
	grid-area: heading;
	margin-left: -28rem;
}

.scores-container {
	grid-area: scores;
	background-color: rgb(253, 253, 253);
	display: grid;
	justify-items: center;
	align-items: center;
	width: 100%;
	overflow-y: scroll;
}

.score-list {
	display: grid;
	justify-items: center;
	align-items: center;
	border-radius: 50px;
	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
	width: 80%;
	height: max-content;
	background-color: #f4f4f4;
	margin-bottom: 3rem;
}

.flex {
	display: flex;
}

.separator {
	padding: 0 0.3rem;
}

.history-winner {
	color: rgb(176, 255, 169);
}

.history-loser {
	color: rgb(255, 169, 169);
}

/*              Viewport less then or equal to 750px            */

@media only screen and (max-width: 750px) {
	.history-holder {
		width: 25rem;
	}

	.title {
		margin-left: -14rem;
	}
}

/*        x      Viewport less then or equal to 750px       x     */

